--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
 </head>
+
 <body>
-   
+   <h1>Odin Recipes</h1>
+   <ul>
+      <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="./recipes/boiled-eggs.html">Hard Boiled Eggs</a></li>
+      <li><a href="./recipes/pork-chop.html">Pork Chop</a></li>
+   </ul>
 </body>
+
 </html>
