--- a/recipes/pork-chop/pork-chop.html
+++ b/recipes/pork-chop/pork-chop.html
@@ -9,7 +9,7 @@
 
 <body>
    <h1>Pork Chop</h1>
-   <img src="../img/pork-chop.webp" alt="picture of delicious pork chop" width="500">
+   <img src="../../img/pork-chop.webp" alt="picture of delicious pork chop" width="500">
 
    <h3>Description:</h3>
    <p>
