--- a/recipes/boiled-eggs.html
+++ b/recipes/boiled-eggs.html
@@ -4,12 +4,12 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Hard Boiled Eggs</title>
+   <title>Hard Boiled Eggs Recipe</title>
 </head>
 
 <body>
    <h1>Hard Boiled Eggs</h1>
-   <img src="../../img/hard-boiled-eggs.webp" alt="picture of delicious hard boiled eggs" width="500">
+   <img src="../img/hard-boiled-eggs.webp" alt="picture of delicious hard boiled eggs" width="500">
 
    <h3>Description:</h3>
    <p>
