--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,12 +4,12 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Lasagna</title>
+   <title>Lasagna Recipe</title>
 </head>
 
 <body>
    <h1>Lasagna</h1>
-   <img src="../../img/lasagna.webp" alt="picture of a delicious lasagna meal" width="500">
+   <img src="../img/lasagna.webp" alt="picture of a delicious lasagna meal" width="500">
 
    <h3>Description:</h3>
    <p>
